--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/style-resources": "^1.2.1",
     "bootstrap": "^4.6.1",
+    "bootstrap-icons": "^1.8.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
